--- a/docroot/themes/custom/ucsf/scss/node/_node-article.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-article.scss
@@ -235,7 +235,8 @@ figure.align-center,
 figure[class="embedded-entity"],
 figure[class="image"],
 figure.image-2014_inline_4-col,
-figure.image-2014_inline_5-col {
+figure.image-2014_inline_5-col,
+.image-2014_wysiwyg_full {
   margin: $space-five;
   margin-top: 0;
   margin-bottom: $space-quadruple;
