--- a/docroot/themes/custom/ucsf/scss/node/_node-narrow-page.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-narrow-page.scss
@@ -43,7 +43,8 @@
     margin-bottom: $space-four;
   }
 
-  .layout-columns__3 { //.layout-columns__three
+  .layout-columns__3,
+  .layout-columns__2 { //.layout-columns__three
     padding: 0;
     padding-top: $space-ten;
 
@@ -61,5 +62,9 @@
     .paragraph-text-block {
       padding: 0;
     }
+  }
+
+  .field__item:last-child {
+    margin-bottom: $space-ten;
   }
 }
